why am i so brilliant? fuck yeah! wrapped up some loose ends on Landing page.

--- a/iOSTrial&Error/iOSTrial&Error/Info.plist
+++ b/iOSTrial&Error/iOSTrial&Error/Info.plist
@@ -51,6 +51,8 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>TheLastCall.ttf</string>
+		<string>Sunrise International Demo.otf</string>
 		<string>Luna.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
