--- a/iOSTrial&Error/Podfile
+++ b/iOSTrial&Error/Podfile
@@ -5,6 +5,7 @@ target 'iOSTrial&Error' do
   # Comment this line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
+pod 'UITextField+Shake', '~> 1.1'
 # pods go here
 
   # Pods for iOSTrial&Error
